[workspace]
resolver = "3"
members = [
    "bd_checker",
    "bd_responder",
    "shared"
]

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Chris Jansen <chris.jansen.work+aws@gmail.com>"]

[workspace.dependencies]
lambda_runtime = "0.13.0"
serde_json = "1.0.140"
tokio = "1.44.1"
chrono = "0.4.40"
