[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aws-config = { version = "1.6.0", features = ["behavior-version-latest"] }
reqwest = { version = "0.12.15", features = ["json", "native-tls-vendored"] }
aws-sdk-dynamodb = "1.69.0"
lambda_runtime.workspace = true
chrono.workspace = true
serde_json.workspace = true
